Tue Jul 23 16:10:08 2002  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/orbsvcs/PortableGroup/PG_GenericFactory.cpp
	  (create_object):

	  Cast an unsigned short value to an unsigned long to silence an
	  apparently bogus Borland C++ warning.  Thanks to Jai for
	  pointing out the warning.

Tue Jul 23 22:23:35 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* orbsvcs/orbsvcs/AV/TCP.h:
	* orbsvcs/orbsvcs/AV/TCP.cpp: Change name of TAO_AV_TCP_Base_Acceptor::open()
	  method to acceptor_open(), to prevent hiding of ACE_Acceptor::open() 
	  virtual method.  Thanks to Steve Huston <shuston@riverace.com> and 
	  Ossama Othman <ossama@doc.ece.uci.edu>.

Tue Jul 23 15:19:00 2002  Mayur Deshpande  <mayur@ics.uci.edu>

	* tests/AMH_Exceptions/client.cpp (main):
	  Changed 'int time' to 'Test::Timestamp time'.  This should now
	  fix BCB.  Thanks to Ossama Othman <ossama@doc.ece.uci.edu> for
	  the suggestion.

Tue Jul 23 17:15:31 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tao/PortableServer/Collocated_Object.cpp
	(_non_existent,_get_component): Removed redundant useages of
	  ACE_TRY blocks.  They were causing some warnings from Tru64
	  compiler.

Tue Jul 23 16:20:39 2002  Steve Huston  <shuston@riverace.com>

        * orbsvcs/orbsvcs/Event/EC_Dispatching_Task.cpp (is_full_i):
          Cast this->cur_count_ to size_t to compare to high_water_mark_.
          Corresponds to a ACE_Message_Queue change I made to ACE yesterday.

        * examples/Simulator/Event_Supplier/DualEC_Sup.{h cpp}
          (DualEC_Supplier::run_orb, run_nav_thread, run_weap_thread):
          Change return type from void * to ACE_THR_FUNC_RETURN to match
          corresponding change in ACE.

Tue Jul 23 12:47:45 2002  Mayur Deshpande  <mayur@ics.uci.edu>

	* tests/AMH_Exceptions/client.cpp (main):
	  Changed an 'long long unsigned int time' to 'int time'.  The BCB
	  compiler was complaining about this data-type (no 64-bit
	  support?).  Hopefully, the compilers will cast the int to the